<resources>
    <string name="app_name">GoogleEatKot</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_my_places">My places list</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in">sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_name">Place Name</string>
    <string name="place_address">Place Address</string>
    <string name="open_now">Open Now :</string>
    <string name="show_on_map">Show on Map</string>
    <string name="add_to_my_places">Add to my places</string>
    <string name="add_to_my_groups">My groups</string>
    <string name="my_places">My Places</string>
    <string name="my_groups">My Groups</string>
    <string name="my_friends">My friends</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_new_group">Create New Group...</string>
    <string name="enter_group_name">Enter group name...</string>
    <string name="done">Done!</string>

</resources>
