<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_restaurant_png"
                android:title="@string/my_places"/>
        <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_message_black_24dp"
                android:title="@string/my_groups"/>
        <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_tag_faces_black_24dp"
                android:title="@string/my_friends"/>
    </group>


    <item android:title="@string/account_settings">
        <menu>
            <item
                    android:id="@+id/nav_update"
                    android:icon="@drawable/ic_update_black"
                    android:title="@string/update_profile"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_restaurant_png"
                    android:title="@string/sign_out"/>
        </menu>
    </item>
</menu>