<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/new_group_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_new_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <ListView
            android:id="@+id/groups_list"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/new_group_button"
            app:layout_constraintTop_toBottomOf="@+id/new_group_button" />

    <EditText
            android:id="@+id/group_name_text"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enter_group_name"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/group_name_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_group_button"
            android:autofillHints="Here you enter the name of your new group." />

    <Button
            android:id="@+id/group_name_button"
            android:layout_width="88dp"
            android:layout_height="54dp"
            android:layout_marginEnd="28dp"
            android:text="@string/done"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_group_button" />

</androidx.constraintlayout.widget.ConstraintLayout>